k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    component: elasticsearch
spec:
  type: NodePort
  selector:
    component: elasticsearch
  ports:
    - name: http
      port: 9200
      targetPort: 9200
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    run: kibana
spec:
  type: NodePort
  selector:
    run: kibana
  ports:
    - name: http
      port: 5601
      targetPort: 5601
      protocol: TCP
